# yippy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  _test.py  fft.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml  release-please.yml  tests.yml
docs/: azimuthal_averaging.md  benchmarking.md  conf.py  index.md  lodconf.py
docs/examples/: 00_Performance_Metrics_Overview.ipynb  01_Core_Throughput.ipynb  02_Stellar_Leakage_and_Contrast.ipynb  03_Spatial_Metrics_and_Backgrounds.ipynb  04_Noise_Floors_and_Integration_Time.ipynb  05_Aperture_Methods_Comparison.ipynb  06_Noise_Floor_Conventions.ipynb  Basics.ipynb  Fourier Interpolation.ipynb  Loading a coronagraph.ipynb  Off-axis examples.ipynb  PerformanceMetrics.ipynb  QuarterSymmetric.ipynb  RadiallySymmetric.ipynb  SkyTrans.ipynb  StellarIntens.ipynb
docs/modules/: off_axis_psf.md  sky_transmission_maps.md  stellar_intensity_maps.md
src/yippy/: __init__.py  coronagraph.py  datasets.py  eqx_coronagraph.py  export.py  header.py  jax_funcs.py  logger.py  offax.py  offax_base.py  offjax.py  performance.py  performance_metric.py  sky_trans.py  stellar_intens.py  transforms.py  util.py
src/yippy/offax/: offax_base.py  one_d.py
src/yippy/offax_interp/: one_d.py  quarter_symmetric.py
src/yippy/offax_psf/: __init__.py  one_d.py  quarter_symmetric.py  two_d.py
tests/: conftest.py  test_eqx_coronagraph.py  test_fft_interpolation.py  test_map_methods.py  test_performance.py
