[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "yippy"
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
description = "A minimal wrapper to create a coronagraph object from a yield input package"
dependencies = ["numpy", "astropy", "scipy", "lod_unit", "tqdm"]
license = { file = "LICENSE" }
dynamic = ['readme', 'version']
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/CoreySpohn/yippy"
Issues = "https://github.com/CoreySpohn/yippy/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
