[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "yippy"
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
description = "A minimal wrapper to create a coronagraph object from a yield input package"
dependencies = ["astropy", "scipy", "lod_unit", "tqdm", "xarray"]
license = { file = "LICENSE" }
dynamic = ['readme', 'version']
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/CoreySpohn/yippy"
Issues = "https://github.com/CoreySpohn/yippy/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/yippy/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[project.optional-dependencies]
docs = [
  "sphinx",
  "myst-parser",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinx_autodoc_typehints",
]
test = ["nox", "pytest", "hypothesis", "pytest-cov"]

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src/"]
exclude = ["tests/", "**/__pycache__", "**/*.venv", "src/**/data"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
reportMissingImports = false
reportMissingTypeStubs = false
reportMissingModuleSource = true
reportMissingParameterType = true
reportMissingReturnType = true
reportGeneralTypeIssues = true
reportUnknownMemberType = "none"
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportUnboundVariable = true
reportAttributeAccessIssue = false
